// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Export at client side 1`] = `
Object {
  "AppChunk": [Function],
  "Avatar": [Function],
  "BaseModal": [Function],
  "Button": [Function],
  "DevTools": [Function],
  "JU": null,
  "Link": [Function],
  "MetaTags": [Function],
  "Modal": [Function],
  "NavLink": [Function],
  "ScalableRect": [Function],
  "actions": Object {
    "collection": Object {
      "addItems": [Function],
      "bookItems": [Function],
      "clean": [Function],
      "freeItems": [Function],
      "loadItemDone": [Function],
      "loadItemInit": [Function],
    },
    "item": Object {
      "dropData": [Function],
      "loadDataDone": [Function],
      "loadDataInit": [Function],
      "setData": [Function],
      "updateReferenceCounter": [Function],
    },
  },
  "client": [Function],
  "config": undefined,
  "isomorphy": Object {
    "buildTimestamp": [Function],
    "isClientSide": [Function],
    "isDevBuild": [Function],
    "isProdBuild": [Function],
    "isServerSide": [Function],
  },
  "reducers": Object {
    "collection": [Function],
    "item": [Function],
  },
  "redux": Object {
    "combineReducers": [Function],
    "connect": [Function],
    "createActions": [Function],
    "handleActions": [Function],
    "proxyAction": [Function],
    "proxyReducer": [Function],
    "resolveAction": [Function],
    "resolveReducers": [Function],
    "storeFactory": [Function],
  },
  "server": null,
  "webpack": Object {
    "requireWeak": [Function],
    "resolveWeak": [Function],
  },
}
`;

exports[`Export at server side 1`] = `
Object {
  "AppChunk": [Function],
  "Avatar": [Function],
  "BaseModal": [Function],
  "Button": [Function],
  "DevTools": [Function],
  "JU": Object {
    "findInDomByClass": [Function],
    "findInDomManyByClass": [Function],
    "render": [Function],
    "renderDom": [Function],
    "shallowRender": [Function],
    "shallowSnapshot": [Function],
    "simulate": Object {
      "abort": [Function],
      "animationEnd": [Function],
      "animationIteration": [Function],
      "animationStart": [Function],
      "beforeInput": [Function],
      "blur": [Function],
      "canPlay": [Function],
      "canPlayThrough": [Function],
      "cancel": [Function],
      "change": [Function],
      "click": [Function],
      "close": [Function],
      "compositionEnd": [Function],
      "compositionStart": [Function],
      "compositionUpdate": [Function],
      "contextMenu": [Function],
      "copy": [Function],
      "cut": [Function],
      "doubleClick": [Function],
      "drag": [Function],
      "dragEnd": [Function],
      "dragEnter": [Function],
      "dragExit": [Function],
      "dragLeave": [Function],
      "dragOver": [Function],
      "dragStart": [Function],
      "drop": [Function],
      "durationChange": [Function],
      "emptied": [Function],
      "encrypted": [Function],
      "ended": [Function],
      "error": [Function],
      "focus": [Function],
      "gotPointerCapture": [Function],
      "input": [Function],
      "invalid": [Function],
      "keyDown": [Function],
      "keyPress": [Function],
      "keyUp": [Function],
      "load": [Function],
      "loadStart": [Function],
      "loadedData": [Function],
      "loadedMetadata": [Function],
      "lostPointerCapture": [Function],
      "mouseDown": [Function],
      "mouseEnter": [Function],
      "mouseLeave": [Function],
      "mouseMove": [Function],
      "mouseOut": [Function],
      "mouseOver": [Function],
      "mouseUp": [Function],
      "paste": [Function],
      "pause": [Function],
      "play": [Function],
      "playing": [Function],
      "pointerCancel": [Function],
      "pointerDown": [Function],
      "pointerEnter": [Function],
      "pointerLeave": [Function],
      "pointerMove": [Function],
      "pointerOut": [Function],
      "pointerOver": [Function],
      "pointerUp": [Function],
      "progress": [Function],
      "rateChange": [Function],
      "reset": [Function],
      "scroll": [Function],
      "seeked": [Function],
      "seeking": [Function],
      "select": [Function],
      "stalled": [Function],
      "submit": [Function],
      "suspend": [Function],
      "timeUpdate": [Function],
      "toggle": [Function],
      "touchCancel": [Function],
      "touchEnd": [Function],
      "touchMove": [Function],
      "touchStart": [Function],
      "transitionEnd": [Function],
      "volumeChange": [Function],
      "waiting": [Function],
      "wheel": [Function],
    },
    "snapshot": [Function],
  },
  "Link": [Function],
  "MetaTags": [Function],
  "Modal": [Function],
  "NavLink": [Function],
  "ScalableRect": [Function],
  "actions": Object {
    "collection": Object {
      "addItems": [Function],
      "bookItems": [Function],
      "clean": [Function],
      "freeItems": [Function],
      "loadItemDone": [Function],
      "loadItemInit": [Function],
    },
    "item": Object {
      "dropData": [Function],
      "loadDataDone": [Function],
      "loadDataInit": [Function],
      "setData": [Function],
      "updateReferenceCounter": [Function],
    },
  },
  "client": [Function],
  "config": Config {
    "SECRET": Object {
      "dummySecretKey": "Dummy Secret Value",
    },
    "dummyKey": "Dummy Value",
  },
  "isomorphy": Object {
    "buildTimestamp": [Function],
    "isClientSide": [Function],
    "isDevBuild": [Function],
    "isProdBuild": [Function],
    "isServerSide": [Function],
  },
  "reducers": Object {
    "collection": [Function],
    "item": [Function],
  },
  "redux": Object {
    "combineReducers": [Function],
    "connect": [Function],
    "createActions": [Function],
    "handleActions": [Function],
    "proxyAction": [Function],
    "proxyReducer": [Function],
    "resolveAction": [Function],
    "resolveReducers": [Function],
    "storeFactory": [Function],
  },
  "server": [Function],
  "webpack": Object {
    "requireWeak": [Function],
    "resolveWeak": [Function],
  },
}
`;
